--- a/sass/website_section/_statistc.scss
+++ b/sass/website_section/_statistc.scss
@@ -1,3 +1,4 @@
+/*Strat Startistics*/
 .our-statistique{
   padding: 100px 0;
   background:url(/images/statistics-bg.png),#ff6300;
@@ -35,3 +36,4 @@
     }
   }
 }
+  /*ENd Startistics*/
